Add Modules and packages (#6)
* Add modules and packages to truffle

* Fix native compilation issues

* Fix compiler tests

* Add example hello world

* Small code cleanup

* Location indicates whole source section

* Location indicates whole source section

* Use ARGS_OFFSET instead of constant value

* Experimental package and import specs

* Add 'package' directive parsing rules

* Add package to AST

* Use modules during compilation

* Add fully qualified names

* Implement test for interpreter implementation of packages

* Split MUL and DIV in parser

* Use proper test name for testing packages in interpreter

* Handle setting current package in AST converter

* Added modules and packages support