@@ -5,7 +5,7 @@ import com.oracle.truffle.api.TruffleLanguage;
 import com.oracle.truffle.api.frame.FrameDescriptor;
 import com.oracle.truffle.api.frame.FrameSlotKind;
 import com.oracle.truffle.api.nodes.Node;
-import gh.marad.chi.core.CompilationScope;
+import gh.marad.chi.core.GlobalCompilationNamespace;
 import gh.marad.chi.core.SymbolScope;
 import gh.marad.chi.truffle.builtin.Builtin;
 import gh.marad.chi.truffle.builtin.MillisBuiltin;
@@ -13,8 +13,8 @@ import gh.marad.chi.truffle.builtin.PrintlnBuiltin;
 import gh.marad.chi.truffle.nodes.FnRootNode;
 import gh.marad.chi.truffle.runtime.ChiFunction;
 import gh.marad.chi.truffle.runtime.LexicalScope;
+import gh.marad.chi.truffle.runtime.namespaces.Modules;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class ChiContext {
@@ -22,17 +22,20 @@ public class ChiContext {
     public static ChiContext get(Node node) { return REFERENCE.get(node); }
 
     public final LexicalScope globalScope;
-    public final CompilationScope globalCompilationScope;
+    public final GlobalCompilationNamespace compilationNamespace;
 
     private final ChiLanguage chiLanguage;
     private final TruffleLanguage.Env env;
 
+    public final Modules modules = new Modules();
+
     public ChiContext(ChiLanguage chiLanguage, TruffleLanguage.Env env) {
         this.chiLanguage = chiLanguage;
         this.env = env;
-        this.globalCompilationScope = new CompilationScope();
-        var builtins = Arrays.asList(
-                new PrintlnBuiltin(),
+        this.compilationNamespace = new GlobalCompilationNamespace();
+
+        List<Builtin> builtins  = List.of(
+                new PrintlnBuiltin(env.out()),
                 new MillisBuiltin()
         );
         var frameDescriptor = prepareFrameDescriptor(builtins);
@@ -42,9 +45,7 @@ public class ChiContext {
 
     private FrameDescriptor prepareFrameDescriptor(List<Builtin> builtins) {
         var fdBuilder = FrameDescriptor.newBuilder();
-        builtins.forEach(builtin -> {
-            fdBuilder.addSlot(FrameSlotKind.Object, builtin.name(), null);
-        });
+        builtins.forEach(builtin -> fdBuilder.addSlot(FrameSlotKind.Object, builtin.name(), null));
         return fdBuilder.build();
     }
 
@@ -55,9 +56,13 @@ public class ChiContext {
     private void installBuiltin(Builtin node) {
         var rootNode = new FnRootNode(chiLanguage, FrameDescriptor.newBuilder().build(), node, node.name());
         var fn = new ChiFunction(rootNode.getCallTarget());
-        globalScope.setObject(node.name(), fn);
-        globalCompilationScope.addSymbol(node.name(), node.type(), SymbolScope.Local);
-        globalCompilationScope.updateSlot(node.name(), globalScope.findSlot(node.name()));
+        modules.getOrCreateModule(node.getModuleName())
+                .defineFunction(node.getPackageName(), fn);
+        var compilationScope = compilationNamespace.getOrCreatePackageScope(
+                node.getModuleName(),
+                node.getPackageName()
+        );
+        compilationScope.addSymbol(node.name(), node.type(), SymbolScope.Package);
     }
 
     public TruffleLanguage.Env getEnv() {
